<resources>
    <string name="app_name">MHSLife</string>
    <string name="mhslife">[MHS|LIFE]</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="gotoregister">Don\'t have an Account?</string>
    <string name="news">[NEWS]</string>
    <string name="favorites">[FAVORITES]</string>
    <string name="emptyfavorites">Oh No! No Groups are favorited.</string>
    <string name="emptyevents">Select Day to View Events</string>
    <string name="credits">credits v1.0</string>
    <string name="createdby">created by bob chen</string>
    <string name="creatortwitter">\@BobDevStudio</string>
    <string name="creatoremail">appdev.bobchen@gmail.com</string>
</resources>
