<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyMask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:layout_marginRight="90dp"
        android:orientation="vertical"
        android:background="@drawable/redroundbox"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/creditsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="@string/credits"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/createdbyTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/createdby"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/creatortwitterTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/creatortwitter"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/creatoremailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/creatoremail"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textSize="14sp"/>

    </LinearLayout>

</RelativeLayout>