<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorSalmon"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:background="@drawable/skyroundbox">

        <EditText
            android:id="@+id/emailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/newPasswordTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/newpassword"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirmPasswordTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:minHeight="40dp"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/skyroundbox"
        android:text="@string/register"
        android:textSize="18sp"
        android:onClick="registerUser"/>

</LinearLayout>